<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.pwr.wybory.LoginActivity">

    <EditText
        android:id="@+id/login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_editText"
        android:layout_below="@+id/login_editText"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_editText"
        android:layout_centerVertical="true"
        android:layout_marginEnd="59dp"
        android:text="@string/log_in" />
</RelativeLayout>
